# kalamna-Backend-AI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: CI.yml  migrations.yml
app/: main.py
app/apps/: __init__.py
app/apps/analytics/: __init__.py  models.py  routers.py  schemas.py  services.py
app/apps/auth/: __init__.py  models.py  routers.py  schemas.py  services.py
app/apps/documents/: __init__.py  models.py  routers.py  schemas.py  services.py
app/apps/employees/: __init__.py  models.py  routers.py  schemas.py  services.py
app/apps/feedback/: __init__.py  models.py  routers.py  schemas.py  services.py
app/apps/organizations/: __init__.py  models.py  routers.py  schemas.py  services.py
app/apps/rag/: __init__.py  models.py  routers.py  (+2 more)
app/core/: __init__.py  config.py  db.py
app/db/: __init__.py  base.py
app/rag_infra/: __init__.py  chunker.py  embedder.py  llm.py  parser.py  vector_db.py
app/storage/: __init__.py  s3.py
app/utils/: __init__.py  helpers.py  logger.py
app/workers/: __init__.py  document_processor.py
docs/: Backend-Project-Setup-&-Run-Instructions.md  ERD Code  database.md  mailer.md
docs/Authentication/: backend_registration.md  frontend_registration.md  mysektchplan_registerflow.md
kalamna/: main.py
kalamna/core/: config.py  db.py  redis.py  security.py  validation.py
kalamna/db/: base.py
kalamna/rag_infra/: __init__.py
kalamna/storage/: s3.py
kalamna/templates/: invite_member.html  invite_member_en.html  mail.html  mail_en.html  reset_password.html  reset_password_en.html  verifcation.html  verification.html  verification_en.html
kalamna/utils/: helpers.py  logger.py  mailer.py
tests/: __init__.py  conftest.py  test_auth.py  test_db.py  test_password_hashing.py  test_rag.py
(+34 files in other folders)
