[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kalamna"
version = "0.1.0"
description = "Kalamna is an AI-powered Arabic customer support platform for Egyptian SMEs.It delivers smart, emotion-aware chatbots with text and voice support, integrating across WhatsApp, Messenger, and web — powered by ReactJS, FastAPI, LangChain, and PostgreSQL."
authors = ["kalamna team"]
readme = "README.md"
packages = [
    { include = "app" }
]


# dependances 

[tool.poetry.dependencies]
python = "^3.12"

# FastAPI
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }

# Database
sqlalchemy = "^2.0.0"
asyncpg = "^0.29.0"
alembic = "^1.13.0"
pgvector = "^0.2.5"

python-dotenv = "^1.0.1"

# Authentication & security
pyjwt = { extras = ["crypto"], version = "^2.8.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }


# we need it to stay clean tho 

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"

black = "^24.0.0"
isort = "^5.13.0"
ruff = "^0.7.0"
mypy = "^1.10.0"
pre-commit = "^4.0.0"


# quailty 
[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
combine_as_imports = true
skip_gitignore = true
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app"]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.14"
ignore_missing_imports = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
namespace_packages = true
mypy_path = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
asyncio_mode = "auto"

